<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hello Custom UI</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="callDesc">call</string>
    <string name="lockDesc">lock</string>
    <string name="timeDesc">time</string>
    <string name="messageDesc">message</string>
    <string name="instagramDesc">instagram</string>
    <string name="ieDesc">ie</string>
    <string name="musicDesc">music</string>
    <string name="charging">Charging:</string>

</resources>
